# Learn-Python

./: CS61A预备清单.md  README.md  hh.md  index方法.md  python题目.ipynb  python题目.py  tasks.json  关于读书 - 以问题导向阅读的注意事项.md  初级会计.md  学习阶段.md  对话模块.py  数据分析项目流程.md  数据类型.py  机器学习阶段计划.md  格式化歌词.py  第七天.py  第三天.py  第九天.py  第二十一天.py  第二十三天.py  第二十二天.py  第二十四天.py  第二十天.py  第二天.py  第五天.py  第八天.py  第六天.py  第十一天.py  第十七天.py  第十三天.py  第十九天.py  第十二天.py  第十五天.py  第十八天.py  第十六天.py  第十四天.py  第十天.py  第四天.py  综合题目.md  网页爬取程序.py  (+5 more)
C/: 24年第2周复盘.md  C语言笔记.md  Rock_paper_scissors_game.c  a.c  b.c  b站CS自学视频资源.md  day1.c  day10.c  day11.c  day12.c  day13.c  day14.c  day15.c  day16.c  day17.c  day18.c  day19.c  day2.c  day20.c  day21.c  day22.c  day23.c  day24.c  day25.c  day26.c  day27.c  day28.c  day29.c  day3.c  day30.c  day31.c  day32.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c  fathm_ft.c  game.c  (+35 more)
CS/: IT行业中核心或盈利能力较强的业务.md  学习方向之间的关系.md  常见的维度类型.md  机器学习计划2.md  机器学习阶段计划.md  计算机科学学习方向.md  词嵌入模型.md
C语言/: hello.c  计算机基础知识.md
Java/: canvas转成DataURL.test.js
math/: 三角函数.md  不等式的性质.md  不等式解法.md  中线，振幅，周期.md  乘积规则、商规则和幂规则.md  二次函数不同形式的特点.md  二次函数抛物线与 x 轴的关系.md  二次函数的极值（顶点）.md  二次方程和二次函数.md  二次方程的求根公式.md  代数公式.md  余弦函数.md  余数定理.md  充分与必要.md  全称与存在量词.md  函数概念+定义域.md  函数的单调性.md  函数的奇偶性.md  函数的平均变化率.md  函数的正负区间和增减区间.md  函数解析式的求法.md  分式函数的值域.md  单位圆.md  反函数.md  因式分解.md  均值不等式（AM-GM不等式）.md  复利公式.md  多项式函数的端行为.md  多项式因式分解.md  多项式的端行为.md  多项式除法和余数定理.md  对数.md  对称轴公式.md  平均变化率.md  弧度和角度.md  德尔塔判别式.md  抛物线的焦点和准线.md  数学的解题思路.md  斜截式方程.md  斜率公式.md  (+26 more)
python/: day10.py  day11.py  day12.py  day15.py  day17.py  (+33 more)
(+48 files in other folders)
